# qnch-chain

./: .gitignore  README.md  package.json
.claude/agents/: coretime-researcher.md  evm-pallet-researcher.md  hackathon-coordinator.md  monorepo-analyzer.md  native-token-researcher.md  papi-specialist.md  parachain-runtime-researcher.md  polkadot-pallet-benchmarking-expert.md  project-decisions.md
contracts/: hardhat.config.ts  package.json
contracts/scripts/: README-deployment-control.md  README-fund-accounts.md  approve-deployer.ts  check-balances.ts  fund-accounts-evm.ts  fund-accounts.ts  test-deployment-control.ts
contracts/test/: DeploymentControl.ts
docs/: DEPLOYMENT_CONTROL_IMPLEMENTATION.md  DOT_INTEGRATION_CHALLENGES.md  XCM_LOCAL_TESTING_PLAN_EVALUATION.md  hackathon-rules.md  native-token.md
parachain/: CLAUDE.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DOT_EVM_PARACHAIN_SCOPING.md  HARDHAT_DEPLOYMENT_GUIDE.md  QUICK_SUDO_REFERENCE.md  SUDO_ACCOUNT_CONFIGURATION.md  hardhat.config.example.js  network.toml  package.json  pop-bench.toml
parachain/node/src/: chain_spec.rs
parachain/node/src/rpc/: mod.rs
parachain/pallets/evm-deployment-control/: Cargo.toml
parachain/pallets/evm-deployment-control/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: benchmarks.rs  deployment_control.rs  lib.rs
parachain/runtime/src/configs/: mod.rs
