[package]
name = "pallet-evm-deployment-control"
version = "0.1.0"
edition = "2021"
authors = ["Hackathon Team"]
description = "EVM deployment control pallet for restricting contract deployments"
license = "Apache-2.0"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"frame-benchmarking?/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
